--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -28,3 +28,19 @@ table.compact p{
   width: 100%;
   height: 400px;
 }
+.marker0 {
+  background-image: url('liked.svg');
+  background-size: contain;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.marker
+{
+  height: 25px;
+  width: 25px;
+  background-color: black;
+  border-radius: 50%;
+  display: inline-block;
+}
