Finded bug on firs load

--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -1,4 +1,4 @@
-%script{ src: "https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js" }
+%script{type: 'module', src: "https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js" }
 %link{ href: "https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css", rel: "stylesheet" }
 
 %h1.header Ticket
