--- a/app/assets/javascripts/tickets.js.erb
+++ b/app/assets/javascripts/tickets.js.erb
@@ -1,3 +1,6 @@
+//import 'mapbox-gl/v1.6.1/mapbox-gl.css';
+import { Map } from 'mapbox-gl/dist/mapbox-gl';
+
 document.addEventListener('turbolinks:load', function () {
     mapboxgl.accessToken = '<%= Rails.application.secrets.mapbox_map_token %>';
     let geojson = gon.geojson
